	* nsterm.m (ns_mouse_position, mouseUp):
	* term.c (term_mouse_position):
	* w32inevt.c (w32_console_mouse_position):
	* w32term.c (w32_mouse_position):
	* xterm.c (XTmouse_position): Use scroll_bar_above_handle.
	(x_send_scroll_bar_event, xm_scroll_callback, xg_scroll_callback):
	Prefer enum and explicit enum members to integers and numeric values.

2014-09-24  Paul Eggert  <eggert@cs.ucla.edu>

	Fix some slow uses and misuses of strcat.
	* doc.c (get_doc_string):
	* gtkutil.c (get_utf8_string):
	* xsmfns.c (x_session_initialize):
	Avoid recomputation of string length.
	* ftfont.c (ftfont_spec_pattern):
	* xfns.c (xic_create_fontsetname):
	Don't assume output buffer is initially zero.

2014-09-23  Paul Eggert  <eggert@cs.ucla.edu>

	* lisp.h (lispstpcpy): Rename from lispstrcpy, and act like stpcpy.
	All callers changed.
	* xterm.c (x_term_init): Use new functionality to avoid two needs
	to compute a string length.

	* dispextern.h, xdisp.c (window_box_right_offset): Now static.

2014-09-23  Dmitry Antipov  <dmantipov@yandex.ru>

	Use known length of a Lisp string to copy it faster.
	* lisp.h (lispstrcpy): New function.  Add comment.
	* callproc.c (child_setup):
	* dbusbind.c (xd_append_arg):
	* doc.c (get_doc_string):
	* font.c (Ffont_xlfd_name):
	* frame.c (xrdb_get_resource):
	* process.c (Fmake_network_process, network_interface_info):
	* w32fns.c (Fx_open_connection):
	* w32proc.c (sys_spawnve):
	* xfns.c (select_visual):
	* xfont.c (xfont_list):
	* xsmfns.c (x_session_initialize):
	* xterm.c (x_term_init): Use it.

2014-09-23  Paul Eggert  <eggert@cs.ucla.edu>

	Fix SAFE_ALLOCA to not exhaust the stack when in a loop.
	Problem reported by Dmitry Antipov in thread leading to:
	http://lists.gnu.org/archive/html/emacs-devel/2014-09/msg00713.html
	This patch fixes only SAFE_ALLOCA, SAFE_NALLOCA, and SAFE_ALLOCA_LISP;
	the experimental local_* macros enabled by USE_LOCAL_ALLOCATORS
	remain unfixed.
	* callproc.c (call_process): Save and restore sa_avail.